# youversion

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-validation-report.md  api.md
docs/api-reference/: bibles.md  highlights.md  languages.md  licenses.md  organizations.md  votd.md
docs/plans/: 2026-01-23-api-list.md  2026-01-23-phase1-implementation.md  2026-01-23-python-sdk-best-practices.md  2026-01-28-add-languages-licenses-orgs-votd-apis.md  2026-01-28-simplify-sync-async-clients.md
examples/: 01_basic_usage.py  02_browse_bible.py  03_read_passages.py  04_error_handling.py  05_multiple_languages.py  06_manual_client_management.py  07_async_client.py  08_oauth_authentication.py  09_languages_api.py  10_organizations_api.py  11_votd_api.py  12_licenses_api.py  OUTPUT.txt
src/youversion/: __init__.py
src/youversion/bibles/: __init__.py  api.py  models.py
src/youversion/core/: __init__.py  client.py  domain_errors.py  errors.py  http.py  result.py
src/youversion/languages/: __init__.py  models.py
src/youversion/licenses/: __init__.py  models.py
src/youversion/organizations/: __init__.py  models.py
src/youversion/votd/: __init__.py  models.py
tests/fixtures/: book_jhn.json  books.json  chapter_jhn3.json  language_en.json  languages.json  licenses.json  organization.json  organizations.json  passage_jhn316.json  version_111.json  versions.json  votd_all.json  votd_day.json
tests/live/: test_api_models.py
tests/unit/: test_public_api.py
tests/unit/bibles/: test_api.py  test_models.py
tests/unit/core/: test_http.py  (+4 more)
(+4 files in other folders)
