[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youversion"
version = "0.3.0"
description = "Python SDK for YouVersion API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ashish" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/PandaWhoCodes/youversion"
Repository = "https://github.com/PandaWhoCodes/youversion"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "pyright>=1.1.350",
    "ruff>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/youversion"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: tests that hit real API"]
asyncio_mode = "auto"
